--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,114 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Basic responsive template</title>
-    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <title>A great landing page</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
+<header>
+    <div class="header-top">
+        <h1 class="logo">LOREM INC</h1>
+        <div class="search">
+            <input type="text" class="search-top">
+            <i class="search-icon"></i>
+        </div>
+    </div>
+</header>
 
+<nav>
+    <ul class="menu-top">
+        <li><a href="#">mens</a></li>
+        <li><a href="#">womens</a></li>
+        <li><a href="#">kids</a></li>
+        <li><a href="#">footwear</a></li>
+        <li><a href="#">accesories</a></li>
+        <li><a href="#">surf gear</a></li>
+        <li><a href="#">collection</a></li>
+        <li><a href="#">sale</a></li>
+        <li><a href="#">brands</a></li>
+        <li><a href="#">blogs</a></li>
+    </ul>
+</nav>
 
+<section>
+    <section class="large-area">
+        <h2>TEES</h2>
+        <img src="./img/photo-section.png"/>
+    </section>
+    <section class="short-area">
+        <h2>SHIRT</h2>
+        <img src="./img/photo-section.png"/>
+    </section>
+    <section class="short-area">
+        <h2>FINS</h2>
+        <img src="./img/photo-section.png"/>
+    </section>
+    <section class="short-area">
+        <h2>SHIRT</h2>
+        <img src="./img/photo-section.png"/>
+    </section>
+    <section class="short-area">
+        <h2>FINS</h2>
+        <img src="./img/photo-section.png"/>
+    </section>
+    <section class="large-area">
+        <h2>TEES</h2>
+        <img src="./img/photo-section.png"/>
+    </section>
+</section>
 
+<section>
+    <h2>LOREM IPSUM</h2>
+    <article>
+        <figure>
+            <img src="./img/thumbnail.png" alt="thumbnail">
+        </figure>
+        <header>
+            <h3>Bla bla bla bla</h3>
+        </header>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/thumbnail.png" alt="thumbnail">
+        </figure>
+        <header>
+            <h3>Bla bla bla bla</h3>
+        </header>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/thumbnail.png" alt="thumbnail">
+        </figure>
+        <header>
+            <h3>Bla bla bla bla</h3>
+        </header>
+    </article>
+    <article>
+        <figure>
+            <img src="./img/thumbnail.png" alt="thumbnail">
+        </figure>
+        <header>
+            <h3>Bla bla bla bla</h3>
+        </header>
+    </article>
+</section>
+
+<section>
+    <h2>DOLOR SIT AMET</h2>
+    <video src="https://www.youtube.com/embed/iHU53NedhkQ" controls="true"></video>
+</section>
+
+<footer>
+    <nav class="menu-bottom">
+        <li><a href="#">mens</a></li>
+        <li><a href="#">womens</a></li>
+        <li><a href="#">kids</a></li>
+        <li><a href="#">footwear</a></li>
+    </nav>
+    <span class="copyright">@ 2016 all rights reserved</span>
+</footer>
 </body>
 </html>
