Added header and banner-gallery styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,59 +5,56 @@
     <title>A great landing page</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
-<header>
-    <div class="header-top">
-        <h1 class="logo">LOREM INC</h1>
-        <div class="search">
-            <input type="text" class="search-top">
-            <i class="search-icon"></i>
-        </div>
+<header class="header-top">
+    <h1 class="logo">LOREM INC</h1>
+    <div class="search">
+        <input type="text" class="search-top">
+        <i class="material-icons search-icon">search</i>
     </div>
+
+    <nav class="menu-top">
+        <a href="#">mens</a>
+        <a href="#">womens</a>
+        <a href="#">kids</a>
+        <a href="#">footwear</a>
+        <a href="#">accesories</a>
+        <a href="#">surf gear</a>
+        <a href="#">collection</a>
+        <a href="#">sale</a>
+        <a href="#">brands</a>
+        <a href="#">blogs</a>
+    </nav>
 </header>
 
-<nav>
-    <ul class="menu-top">
-        <li><a href="#">mens</a></li>
-        <li><a href="#">womens</a></li>
-        <li><a href="#">kids</a></li>
-        <li><a href="#">footwear</a></li>
-        <li><a href="#">accesories</a></li>
-        <li><a href="#">surf gear</a></li>
-        <li><a href="#">collection</a></li>
-        <li><a href="#">sale</a></li>
-        <li><a href="#">brands</a></li>
-        <li><a href="#">blogs</a></li>
-    </ul>
-</nav>
-
-<section>
-    <section class="large-area">
+<section class="banner-gallery">
+    <section class="banner-item large-area">
+        <img src="./img/default-image.jpg"/>
         <h2>TEES</h2>
-        <img src="./img/photo-section.png"/>
     </section>
-    <section class="short-area">
+    <section class="banner-item short-area">
         <h2>SHIRT</h2>
-        <img src="./img/photo-section.png"/>
+        <img src="./img/default-image.jpg"/>
     </section>
-    <section class="short-area">
+    <section class="banner-item short-area">
         <h2>FINS</h2>
-        <img src="./img/photo-section.png"/>
+        <img src="./img/default-image.jpg"/>
     </section>
-    <section class="short-area">
+    <section class="banner-item short-area">
         <h2>SHIRT</h2>
-        <img src="./img/photo-section.png"/>
+        <img src="./img/default-image.jpg"/>
     </section>
-    <section class="short-area">
+    <section class="banner-item short-area">
         <h2>FINS</h2>
-        <img src="./img/photo-section.png"/>
+        <img src="./img/default-image.jpg"/>
     </section>
-    <section class="large-area">
+    <section class="banner-item large-area">
         <h2>TEES</h2>
-        <img src="./img/photo-section.png"/>
+        <img src="./img/default-image.jpg"/>
     </section>
 </section>
 
